fixed problem with visible scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  /* overflow: scroll; */
+  overflow: scroll;
   position: relative;
 }
 
@@ -138,7 +138,7 @@ body {
 .list {
   list-style: none;
   padding: 0.8rem 0;
-  /* overflow: scroll; */
+  overflow: scroll;
 }
 
 .list-watched {
@@ -337,6 +337,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.box::-webkit-scrollbar {
+  display: none;
+}
+
+.list::-webkit-scrollbar {
+  display: none;
+}
+
+.list-watched::-webkit-scrollbar {
+  display: none;
 }
 
 /*
